--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <li>步驟一，完成一個2x2x3區塊</li>
 <li>步驟二，<a href="ru.html">降群為R, U面旋轉的群</a></li>
 <li>步驟三，<a href="2pairs.html">降群為保留2個pairs的群</a></li>
-<li>步驟四，<a href="3pairs.html">降群為保留3個pairs的群</a></li>
+<li>步驟四，降群為保留3個pairs的群 <a href="3pairs_b.html">初階</a> <a href="3pairs_i.html">中階</a> <a href="3pairs_a.html">高階</a></li>
 <li>步驟五，<a href="4pairs.html">降群為保留4個pairs的群</a></li>
 <li>步驟六，<a href="exblock.html">降群為保留3個pairs與1個1x2x2區塊的群</a></li>
 </ul>
