--- a/3pairs_i.html
+++ b/3pairs_i.html
@@ -248,7 +248,7 @@ z形
 </table>
 
 <h2>鏡射轉動</h2>
-這裡有4種鏡射轉動，每個鏡射轉動都會因為組新pair的角塊一開始的位置有不同的轉動結果，皆可分成3類
+鏡射轉動會因為組新pair的角塊一開始的位置有不同的轉動結果，可分成3類
 <p>
 <span class="pu">&emsp;</span>表示要組新pair的角塊，即原本顏色為<span class="gr">&emsp;</span><span class="or">&emsp;</span><span class="wh">&emsp;</span>的那一個角塊。
 <table>
