--- a/2pairs.html
+++ b/2pairs.html
@@ -20,30 +20,30 @@
 <h2>組第一個pair</h2>
 下面3個轉動其中一個可以組出第一個pair
 <br>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UR URB:DBR|alg=U R2'|setupmoves=|flags=startsolved showalg">轉動3</div>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UR URB:BRD|alg=R2' U R U'|setupmoves=|flags=startsolved showalg">轉動15</div>
-      <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UR URB:RDB|alg=R' U|setupmoves=|flags=startsolved showalg">轉動21</div>
+  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UR URB:DBR|alg=U R2'|setupmoves=|flags=startsolved showalg"></div>
+  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UR URB:BRD|alg=R2' U R U'|setupmoves=|flags=startsolved showalg"></div>
+      <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UR URB:RDB|alg=R' U|setupmoves=|flags=startsolved showalg"></div>
 <p>
 當然下面3個轉動只是上面3個轉動的鏡像，其中一個也可以組出第一個pair
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UL URB:BRD|alg=R' U2|setupmoves=R2' U2|flags=startsolved showalg">轉動3</div>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UL URB:DBR|alg=U2' R' U' R|setupmoves=R2' U2|flags=startsolved showalg">轉動15</div>
-      <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UL URB:RDB|alg=U R'|setupmoves=R2' U2|flags=startsolved showalg">轉動21</div>
+  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UL URB:BRD|alg=R' U2|setupmoves=R2' U2|flags=startsolved showalg"></div>
+  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UL URB:DBR|alg=U2' R' U' R|setupmoves=R2' U2|flags=startsolved showalg"></div>
+      <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UL URB:RDB|alg=U R'|setupmoves=R2' U2|flags=startsolved showalg"></div>
 
 <h2>組第二個pair</h2>
 下面3個轉動其中一個可以組出第二個pair，<span class="iwx">X</span>的部份為第一個pair
 <br>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR LBU:DRB|alg=U' R2|setupmoves=U' R|flags=startsolved showalg">轉動3</div>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR ULB:DRB|alg=R2 U' R' U|setupmoves=U' R|flags=startsolved showalg">轉動15</div>
-      <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR BUL:DRB|alg=R U'|setupmoves=U' R|flags=startsolved showalg">轉動21</div>
+  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR LBU:DRB|alg=U' R2|setupmoves=U' R|flags=startsolved showalg"></div>
+  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR ULB:DRB|alg=R2 U' R' U|setupmoves=U' R|flags=startsolved showalg"></div>
+      <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR BUL:DRB|alg=R U'|setupmoves=U' R|flags=startsolved showalg"></div>
 <p>
 當然下面3個轉動只是上面3個轉動的鏡像，其中一個也可以組出第二個pair
 <br>
-      <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR BUL:DRB|alg=R U2'|setupmoves=U' R U' R U2 R U'|flags=startsolved showalg">轉動21</div>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR ULB:DRB|alg=U2' R U R'|setupmoves=U' R U' R U2 R U'|flags=startsolved showalg">轉動15</div>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR LBU:DRB|alg=U' R|setupmoves=U' R U' R U2 R U'|flags=startsolved showalg">轉動3</div>
+      <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR BUL:DRB|alg=R U2'|setupmoves=U' R U' R U2 R U'|flags=startsolved showalg"></div>
+  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR ULB:DRB|alg=U2' R U R'|setupmoves=U' R U' R U2 R U'|flags=startsolved showalg"></div>
+  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR LBU:DRB|alg=U' R|setupmoves=U' R U' R U2 R U'|flags=startsolved showalg"></div>
 
 <p>
-下一步：<a href="3pairs.html">降群為保留3個pairs的群</a> <a href="index.html">RUP解法</a>
+下一步：降群為保留3個pairs的群<a href="3pairs_b.html">初階</a> <a href="3pairs_i.html">中階</a> <a href="3pairs_a.html">高階</a> | <a href="index.html">RUP解法</a>
 <p>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/"><img alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/3.0/tw/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">魔術方塊的RUP解法</span>由<a xmlns:cc="http://creativecommons.org/ns#" href="https://www.facebook.com/presleykimo" property="cc:attributionName" rel="cc:attributionURL">吳宗諺</a>製作，以<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/">創用CC 姓名標示-非商業性-禁止改作 3.0 台灣 授權條款</a>釋出。
 
