--- a/3pairs_a.html
+++ b/3pairs_a.html
@@ -295,7 +295,7 @@ z形
   <td>
   <div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=F:purple|tweaks=x:UL x:ULB x:UR x:URB F:DRB|setupmoves=U' R2'|flags=startsolved showalg">M'1a</div>
 <br>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=F:purple|tweaks=x:UL x:ULB x:UR x:URB F:DRB|setupmoves=U' R'|flags=startsolved showalg">M1'b</div>
+  <div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=F:purple|tweaks=x:UL x:ULB x:UR x:URB F:DRB|setupmoves=U' R'|flags=startsolved showalg">M'1b</div>
   </td>
   <td>
   <div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=F:purple|tweaks=x:UL x:ULB x:UR x:URB F:DRB|setupmoves=U' R'|flags=startsolved showalg">N1a</div>
