--- a/2pairs.html
+++ b/2pairs.html
@@ -1,51 +1,54 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-	<title>降群為保留2個pairs的群</title>
+	<title>完成2個pairs</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
   <link rel="stylesheet" href="cube.css"/>
 </head>
 <body>
 
-<h1>降群為保留2個pairs的群</h1>
+<script>
+  ROOFPIG_CONF_F5="hover=3|colors=F:o B:r U:y D:w R:b L:g|flags=startsolved showalg"
+  ROOFPIG_CONF_F6="hover=3|colors=F:o B:r U:y D:w R:b L:purple|flags=startsolved showalg"
+</script>
+
+<h1>完成2個pairs</h1>
 
 <h2>前言</h2>
-如果只是降群至後面的步驟只需轉動R, U面這還不夠，我們要讓只需轉R, U面這種條件成為助力，而非阻力，這降群才具說服力。這裡我們是利用組合在R, U層的pair來再進行降群。
-<p>
 現在要轉出2個pair，也就是下圖1有顏色的那2個pair。這個步驟的所有轉動皆只轉動R, U面
 <p>
-<div class="roofpig rp180" data-config="colored=UL ULB UR URB|solved=UR-">圖1</div>
+<div class="roofpig rp180" data-config="base=F5|colored=UL ULB UR URB|solved=UR-">圖1</div>
 
-<h2>組第一個pair</h2>
+<h2>組第1個pair</h2>
 下面3個轉動其中一個可以組出第一個pair
 <br>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UR URB:DBR|alg=U R2'|setupmoves=|flags=startsolved showalg"></div>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UR URB:BRD|alg=R2' U R U'|setupmoves=|flags=startsolved showalg"></div>
-      <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UR URB:RDB|alg=R' U|setupmoves=|flags=startsolved showalg"></div>
+  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=UR:UR URB:DBR|alg=U R2'|setupmoves="></div>
+  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=UR:UR URB:BRD|alg=R2' U R U'|setupmoves="></div>
+      <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=UR:UR URB:RDB|alg=R' U|setupmoves="></div>
 <p>
 當然下面3個轉動只是上面3個轉動的鏡像，其中一個也可以組出第一個pair
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UL URB:BRD|alg=R' U2|setupmoves=R2' U2|flags=startsolved showalg"></div>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UL URB:DBR|alg=U2' R' U' R|setupmoves=R2' U2|flags=startsolved showalg"></div>
-      <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=UR:UL URB:RDB|alg=U R'|setupmoves=R2' U2|flags=startsolved showalg"></div>
+  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=UR:UL URB:BRD|alg=R' U2|setupmoves=R2' U2"></div>
+  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=UR:UL URB:DBR|alg=U2' R' U' R|setupmoves=R2' U2"></div>
+      <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=UR:UL URB:RDB|alg=U R'|setupmoves=R2' U2"></div>
 
-<h2>組第二個pair</h2>
+<h2>組第2個pair</h2>
 下面3個轉動其中一個可以組出第二個pair，<span class="iwx">X</span>的部份為第一個pair
 <br>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR LBU:DRB|alg=U' R2|setupmoves=U' R|flags=startsolved showalg"></div>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR ULB:DRB|alg=R2 U' R' U|setupmoves=U' R|flags=startsolved showalg"></div>
-      <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR BUL:DRB|alg=R U'|setupmoves=U' R|flags=startsolved showalg"></div>
+  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UR x:URB UL:FR LBU:DRB|alg=U' R2|setupmoves=U' R"></div>
+  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UR x:URB UL:FR ULB:DRB|alg=R2 U' R' U|setupmoves=U' R"></div>
+      <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UR x:URB UL:FR BUL:DRB|alg=R U'|setupmoves=U' R"></div>
 <p>
 當然下面3個轉動只是上面3個轉動的鏡像，其中一個也可以組出第二個pair
 <br>
-      <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR BUL:DRB|alg=R U2'|setupmoves=U' R U' R U2 R U'|flags=startsolved showalg"></div>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR ULB:DRB|alg=U2' R U R'|setupmoves=U' R U' R U2 R U'|flags=startsolved showalg"></div>
-  <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UR x:URB UL:FR LBU:DRB|alg=U' R|setupmoves=U' R U' R U2 R U'|flags=startsolved showalg"></div>
+      <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UR x:URB UL:FR BUL:DRB|alg=R U2'|setupmoves=U' R U' R U2 R U'"></div>
+  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UR x:URB UL:FR ULB:DRB|alg=U2' R U R'|setupmoves=U' R U' R U2 R U'"></div>
+  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UR x:URB UL:FR LBU:DRB|alg=U' R|setupmoves=U' R U' R U2 R U'"></div>
 
 <p>
-下一步：降群為保留3個pairs的群<a href="3pairs_b.html">初階</a> <a href="3pairs_i.html">中階</a> <a href="3pairs_a.html">高階</a> | <a href="index.html">RUP解法</a>
+下一步：<a href="3pairs_a.html">完成第3個pair</a> | <a href="index.html">總目錄</a>
 <p>
-<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/"><img alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/3.0/tw/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">魔術方塊的RUP解法</span>由<a xmlns:cc="http://creativecommons.org/ns#" href="https://www.facebook.com/presleykimo" property="cc:attributionName" rel="cc:attributionURL">吳宗諺</a>製作，以<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/">創用CC 姓名標示-非商業性-禁止改作 3.0 台灣 授權條款</a>釋出。
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/"><img alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/3.0/tw/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">魔術方塊的RUPM, PRUM解法</span>由<a xmlns:cc="http://creativecommons.org/ns#" href="https://www.facebook.com/presleykimo" property="cc:attributionName" rel="cc:attributionURL">吳宗諺</a>製作，以<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/">創用CC 姓名標示-非商業性-禁止改作 3.0 台灣 授權條款</a>釋出。
 
 <script src="jquery.min.js"></script>
 <script src="roofpig_and_three.min.js"></script>
