--- a/index.html
+++ b/index.html
@@ -1,52 +1,67 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-	<title>RUP method</title>
+	<title>RUPM, PRUM method</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
   <link rel="stylesheet" href="cube.css"/>
 </head>
 <body>
+<!--
 <div class="lan">
 <a href="index_eng.html">English</a>
 </div>
-<h1>魔術方塊的RUP解法</h1>
+-->
+<h1>魔術方塊的RUPM, PRUM解法</h1>
 作者：吳宗諺
 
 <h2>簡介</h2>
-這裡是一個魔術方塊解法的教學網站，教的方法是我創作的新方法。
+這裡是一個魔術方塊解法的教學網站。
 <p>
-這個方法第一步和Petrus方法一樣也是做一個2x2x3區塊，但接下來的步驟沒有一個和Petrus方法一樣，整體內涵也差別甚大，Petrus方法還是要完成前2層，和CFOP法比較相近。現在介紹這個方法是個降群法，降為R, U面旋轉群及不破壞已完成pairs的群，沒有F2L，更不會有PLL、OLL，而且有些步驟有其創意。
+介紹兩個方法皆為降群法，降為R, U面旋轉群及不破壞已完成pairs，鏡射變換為其很重要的特徵，不會有PLL、OLL。其中一個方法為另一個方法的改進版，兩個方法的最後三個步驟完全一樣。
 <p>
-所以我給它一個新名稱，「Reduce to R, U face rotations group and retain Pairs group」，簡稱「RUP法」。
+暫時稱第一個方法為，「Reduce to R, U face rotations group and retain Pairs and mirror reflection」，簡稱「RUPM法」。
+<p>
+暫時稱第二個方法為，「Retain Pairs group and reduce to R, U face rotations group and mirror reflection」，簡稱「PRUM法」。
 <p>
 這裡的位置與旋轉使用符號是使用目前廣為通行的<a href="https://ruwix.com/the-rubiks-cube/notation/advanced/" target="_blank">符號寫法</a>。
 
-<h2>轉法</h2>
+<h2>RUPM轉法</h2>
 
-步驟一難度不高，<a href="http://lar5.com/cube" target="_blank">Petrus方法</a>的網站中的第一、二步寫得很詳盡，這裡不再贅述。
 <ul>
 <li>步驟一，完成一個2x2x3區塊</li>
-<li>步驟二，<a href="ru.html">降群為R, U面旋轉的群</a></li>
-<li>步驟三，<a href="2pairs.html">降群為保留2個pairs的群</a></li>
-<li>步驟四，降群為保留3個pairs的群 <a href="3pairs_b.html">初階</a> <a href="3pairs_i.html">中階</a> <a href="3pairs_a.html">高階</a></li>
-<li>步驟五，<a href="4pairs.html">降群為保留4個pairs的群</a></li>
-<li>步驟六，<a href="exblock.html">降群為保留3個pairs與1個1x2x2區塊的群</a></li>
+<li>步驟二，<a href="ru.html">進入&lt;R, U&gt;</a></li>
+<li>步驟三，<a href="2pairs.html">完成2個pairs</a></li>
+<li>步驟四，<a href="3pairs_a.html">完成第3個pair</a></li>
+<li>步驟五，<a href="4pairs.html">完成第4個pair</a></li>
+<li>步驟六，<a href="exblock.html">拓展為3個pairs與1個1x2x2區塊</a></li>
+</ul>
+
+<h2>PRUM轉法</h2>
+
+<ul>
+<li>步驟一，<a href="blocks1pair.html">完成被取代1個pair的2x2x3區塊</a></li>
+<li>步驟二，<a href="twistedge.html">扭轉邊塊方向</a></li>
+<li>步驟三，<a href="2pairslack.html">完成第2個pairs及2x2x3區塊欠缺的pair</a></li>
+<li>步驟四，<a href="pru.html">進入保留2個pair的&lt;R, U &gt;</a></li>
+<li>步驟五，<a href="3pairs_a.html">完成第3個pair</a></li>
+<li>步驟六，<a href="4pairs.html">完成第4個pair</a></li>
+<li>步驟七，<a href="exblock.html">拓展為3個pairs與1個1x2x2區塊</a></li>
 </ul>
 
 <h2>關於我</h2>
-吳宗諺，現為一國中數學教師，個性很宅，不愛說話，卻愛唱歌，喜愛數學及音樂，崇拜<a href="http://www.books.com.tw/products/0010588185" target="_blank">Paul Lockhart</a>老師及洪萬生老師，也喜愛霹靂人物普九年，總覺得數學是門藝術，聽音樂尤其愛聽藍調，愛聽歌手的呼吸。
+吳宗諺，現為一國中數學教師，個性很宅，不愛說話，卻愛唱歌，喜愛數學及音樂，總覺得數學是門藝術，聽音樂尤其愛聽藍調，愛聽歌手的呼吸。
 <p>
-印象中小時曾不小心轉成功過魔術方塊，但沒有方法，後來漸漸沒再碰了。直到今年4月才不小心再接觸魔術方塊，在熱忱的趨使下，感謝老天賜與我這個方法。
+印象中小時曾轉過魔術方塊，後來漸漸沒再碰了。直到今年4月才不小心再接觸魔術方塊，在熱忱的趨使下，感謝老天賜與我這個方法。
 <p>
-寫於2018年7月18日
+初寫於2018年7月18日，最近一次更新於2019年4月29日
 
 <p>
 對這個轉法有任何問題或建議可以email至<a href="mailto:presleykimo@yahoo.com.tw">presleykimo@yahoo.com.tw</a>
 <p>
 POWERED BY <a href="https://github.com/larspetrus/Roofpig" target="_blank">Roofpig</a>
 <p>
-<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/"><img alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/3.0/tw/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">魔術方塊的RUP解法</span>由<a xmlns:cc="http://creativecommons.org/ns#" href="https://www.facebook.com/presleykimo" property="cc:attributionName" rel="cc:attributionURL">吳宗諺</a>製作，以<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/">創用CC 姓名標示-非商業性-禁止改作 3.0 台灣 授權條款</a>釋出。
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/"><img alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/3.0/tw/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">魔術方塊的RUPM, PRUM解法</span>由<a xmlns:cc="http://creativecommons.org/ns#" href="https://www.facebook.com/presleykimo" property="cc:attributionName" rel="cc:attributionURL">吳宗諺</a>製作，以<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/">創用CC 姓名標示-非商業性-禁止改作 3.0 台灣 授權條款</a>釋出。
 
 <script src="jquery.min.js"></script>
 <script src="roofpig_and_three.min.js"></script>
